syntax = "proto3";

message Player {
    int32 id = 1;
    string name = 2;
    string lastname = 3;
    string position = 4;
    int32 age = 5;
    int32 team = 6;
}

message Team {
    int32 id = 1;
    string city = 2;
    string name = 3;
}

service FootballService {
    rpc GetAllPlayers (Empty) returns (PlayersList) {}
    rpc GetPlayer (Id) returns (Player) {}
    rpc AddPlayer(Player) returns (Empty) {}
    rpc DeletePlayer(Id) returns (Empty) {}

    rpc GetAllTeams(Empty) returns (TeamList) {}
    rpc GetTeam (Id) returns (Team) {}
    rpc AddTeam(Team) returns (Empty) {}
    rpc DeleteTeam(Id) returns (Empty) {}
}

message Empty {}

message PlayersList {
   repeated Player players = 1;
}
message TeamList {
    repeated Player teams = 1;
 }
message Id {
    int32 id = 1;
}
